# Photon

./: .gitmodules  CMakeLists.txt  README.md  common.cmake
doc/: Communication1Ver.md  Communication_longterm.md
source/: CMakeLists.txt
source/photonbase/: CMakeLists.txt
source/photonbase/public/: Types.h  Variant.h
source/photonbase/public/photonbase/: DataDeserializer.h  DataSerializer.h  Types.h  Variant.h
source/photonbase/public/photonbase/application/: ApplicationManager.h  BaseApplication.h  IApplication.h
source/photonbase/public/photonbase/core/: Types.h  Variant.h
source/photonbase/public/photonbase/protocol/: BaseProtocol.h  ChunkHeader.h  DataDeserializer.h  DataSerializer.h  IProtocol.h  MessageHeader.h  PhotonProtocol.h  RemoteMethod.cpp  RemoteMethod.h  RemoteMethodBinding.h  RemoteMethodInfo.cpp  RemoteMethodInfo.h
source/photonbase/public/photonbase/transport/: TcpTransport.h
source/photonbase/src/photonbase/: DataDeserializer.cpp  DataSerializer.cpp  Variant.cpp
source/photonbase/src/photonbase/application/: BaseApplication.cpp
source/photonbase/src/photonbase/core/: Variant.cpp
source/photonbase/src/photonbase/protocol/: BaseProtocol.cpp  DataDeserializer.cpp  DataSerializer.cpp  PhotonProtocol.cpp
source/photonbase/src/photonbase/protocol/impl/: PhotonProtocolImpl.cpp  PhotonProtocolImpl.h
source/photonbase/src/photonbase/transport/: TcpTransport.cpp
source/photonbase/test/: TestRemoteMethodBinding.cpp  TestRemoteMethodBinding.h  TestSerializer.cpp  TestSerializer.h  TestVariant.cpp  TestVariant.h  photonbase_test.cpp
source/photonclient/: CMakeLists.txt
source/photonclient/extra/mac/: Info.plist.in
source/photonclient/src/: MediaPlayer.cpp  MediaPlayer.h  PlayerEvent.cpp  PlayerEvent.h  VideoSource.cpp  VideoSource.h  main.cpp
source/photonclient/src/audio/: AudioDestination.cpp  AudioDestination.h  AudioDestinationInfo.cpp  AudioDestinationInfo.h  AudioFrameFormat.cpp  AudioFrameFormat.h  AudioSource.cpp  AudioSource.h  AudioSourceInfo.cpp  AudioSourceInfo.h  InitPortAudioHelper.cpp  InitPortAudioHelper.h
source/photonclient/src/imgui/: cimgui.h  imgui_heler.h  imgui_impl_opengl3.h
source/photonclient/src/video/: FrameFormat.h  IVideoFrame.h  VideoFrameFormat.h  VideoSource.h  VideoSourceInfo.h
source/photonclient/src/video/impl/linux/: Video4Linux2Helper.cpp  Video4Linux2Helper.h  VideoSourceInfoLinux.cpp  VideoSourceInfoLinux.h  VideoSourceLinux.cpp  VideoSourceLinux.h
source/photonclient/src/video/impl/mac/: AVFoundationHelper.h  AVFoundationHelper.mm  VideoSourceInfoMac.h  VideoSourceInfoMac.mm  VideoSourceMac.cpp  VideoSourceMac.h  VideoSourceMac.mm
source/photonclient/src/video/impl/win32/: DShowHelper.cpp  DShowHelper.h  VideoSourceInfoWin32.cpp  VideoSourceInfoWin32.h  VideoSourceWin32.cpp  VideoSourceWin32.h
source/photonserver/: CMakeLists.txt
source/photonserver/src/: ClientHandle.cpp  ClientHandle.h  main.cpp
source/photonserver/src/spdlog/: spdlog.h
